tests/language_modules/09_statements/invalid_semantics/assignment_type_mismatch.vf
module AssignmentTypeMismatch

procedure main()
is
    let amount: Integer = 1
    amount := true
end main

end AssignmentTypeMismatch